syntax = "proto3";

option csharp_namespace = "QuantLab.Protos.MarketData";

package quantlab.protos.marketdata;


// DecimalValue with int64 units and int32 scale â€” precise and fast
message DecimalValue {
  int64 units = 1;
  int32 scale = 2;
}

message Bar {
  string symbol = 1;
  string interval = 2;
  string timestamp = 3;
  DecimalValue open = 4;
  DecimalValue high = 5;
  DecimalValue low = 6;
  DecimalValue close = 7;
  int32 volume = 8;
}

message MarketDataRequest {
  string symbol = 1;
  string interval = 2;
}

message MarketDataResponse {
  string message = 1;
  repeated Bar bars = 2;
}

service MarketDataGrpc {
  rpc GetMarketData (MarketDataRequest) returns (MarketDataResponse);
}